--- a/2.html
+++ b/2.html
@@ -3,27 +3,29 @@
     <head>
         <title>Tottenham</title>
         <meta charset="utf-8">
+        <link href="./css/style.css" rel="stylesheet">
     </head>
-    
     <body>
-        <h1><a href="index.html">WEB</a></h1>
-        <ol>  
-            <li><a href="1.html">롯데 자이언츠</a></li>
-            <li><a href="2.html">Tottenham</a></li>
-            <li><a href="3.html">天元突破グレンラガン</a></li>
-        </ol>
-           
-        <h2>Tottenham</h2>
-        <hr />
-        <p>
-            Tottenham Hotspur Football Club, commonly referred to as Tottenham 
-            or Spurs, is an English professional football club based in 
-            Tottenham, London. It competes in the Premier League, the top flight of 
-            English football. The team has played its home matches in the 62,850-capacity 
-            Tottenham Hotspur Stadium since April 2019, replacing their former home of 
-            White Hart Lane, which had been demolished to make way for the new 
-            stadium on the same site.
-        </p>    
+        <h1><a href="index.html">DaSSe</a></h1>
+        <div id="grid">
+            <ol>  
+                <li><a href="1.html" class="list">롯데 자이언츠</a></li>
+                <li><a href="2.html" class="list">Tottenham</a></li>
+                <li><a href="3.html" class="list">天元突破グレンラガン</a></li>
+            </ol>
+            <div id="article">
+                <h2>Tottenham</h2>
+                <p>
+                    Tottenham Hotspur Football Club, commonly referred to as Tottenham 
+                    or Spurs, is an English professional football club based in 
+                    Tottenham, London. It competes in the Premier League, the top flight of 
+                    English football. The team has played its home matches in the 62,850-capacity 
+                    Tottenham Hotspur Stadium since April 2019, replacing their former home of 
+                    White Hart Lane, which had been demolished to make way for the new 
+                    stadium on the same site.
+                </p>
+            </div>
+        </div>    
     </body>
 </html>
 
