--- a/index.html
+++ b/index.html
@@ -1,36 +1,43 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>WEB1</title>
+        <title>DaSSe</title>
         <meta charset="utf-8">
+        <link href="./css/style.css" rel="stylesheet">
     </head>
-    
     <body>
-        <h1><a href="index.html">WEB</a></h1>
-        <ol>  
-            <li><a href="1.html">롯데 자이언츠</a></li>
-            <li><a href="2.html">Tottenham</a></li>
-            <li><a href="3.html">天元突破グレンラガン</a></li>
-        </ol>
-           
-        <h2>WEB</h2>
-        <hr />
-
-        <p>
-            The World Wide Web (WWW), commonly known as the Web, is the world's 
-            dominant software platform. It is an information space where 
-            documents and other web resources can be accessed through the Internet 
-            using a web browser. The Web has changed people's lives immeasurably. 
-            It is the primary tool billions of people worldwide use to interact 
-            on the Internet. It was invented by Tim Berners-Lee at CERN in 1989 
-            and opened to the public in 1991.
-        </p>
-        <p>
-            <a href="http://info.cern.ch/">home of the first website</a>
-        </p>
+        <h1><a href="index.html">DaSSe</a></h1>
+        <div id="grid">
+            <ol>  
+                <li><a href="1.html" class="list">롯데 자이언츠</a></li>
+                <li><a href="2.html" class="list">Tottenham</a></li>
+                <li><a href="3.html" class="list">天元突破グレンラガン</a></li>
+            </ol>
+            <div id="article">
+                <h2>WEB</h2>
+                <p>
+                    The World Wide Web (WWW), commonly known as the Web, is the world's 
+                    dominant software platform. It is an information space where 
+                    documents and other web resources can be accessed through the Internet 
+                    using a web browser. The Web has changed people's lives immeasurably. 
+                    It is the primary tool billions of people worldwide use to interact 
+                    on the Internet. It was invented by Tim Berners-Lee at CERN in 1989 
+                    and opened to the public in 1991.
+                </p>
+                <p>
+                    <a href="http://info.cern.ch/"><font color="coral">HOME OF THE FIRST WEBSITE</font></a>
+                </p>
+                <p>
+                    <iframe width="560" height="315" 
+                    src="https://www.youtube.com/embed/tZooW6PritE" 
+                    title="YouTube video player" frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </p>
+            </div>
+        </div>
+        <!--
+            2022-06-25
+            WEB-HTML-CSS
+        -->  
     </body>
 </html>
-
-
-
-
