--- a/1.html
+++ b/1.html
@@ -12,6 +12,7 @@
                 <li><a href="1.html" class="list">롯데 자이언츠</a></li>
                 <li><a href="2.html" class="list">Tottenham</a></li>
                 <li><a href="3.html" class="list">天元突破グレンラガン</a></li>
+                <li><a href="4.html" class="list">北京国安足球俱乐部</a></li>
             </ol>
             <div id="article">   
                 <h2>롯데 자이언츠</h2>
@@ -21,8 +22,8 @@
                 </p>
                 <p>
                     삼성 라이온즈와 함께 
-                    <a href="http://www.giantsclub.com/html/" target="_blank" title="롯데 자이언츠 공식 홈페이지">롯데 자이언츠</a>
-                    는 원년부터 연고지, 팀명, 모기업이 바뀌지 않으며 현재까지 이어져온 유이한 팀이며 
+                    <a href="http://www.giantsclub.com/html/" target="_blank" title="롯데 자이언츠 공식 홈페이지">롯데 자이언츠</a>는 
+                    원년부터 연고지, 팀명, 모기업이 바뀌지 않으며 현재까지 이어져온 유이한 팀이며 
                     실업야구 시절을 포함한다면 <strong>리그보다 오랜 역사를 자랑하는 유일한 팀이다.</strong>
                     2020년 5월 6일로 창단 45주년을 맞았다.
                 </p>
