--- a/3.html
+++ b/3.html
@@ -12,6 +12,7 @@
                 <li><a href="1.html" class="list">롯데 자이언츠</a></li>
                 <li><a href="2.html" class="list">Tottenham</a></li>
                 <li><a href="3.html" class="list">天元突破グレンラガン</a></li>
+                <li><a href="4.html" class="list">北京国安足球俱乐部</a></li>
             </ol>
             <div id="article">
                 <h2>天元突破グレンラガン</h2>
