--- a/1.html
+++ b/1.html
@@ -8,12 +8,12 @@
     <body>
         <h1><a href="index.html">DaSSe</a></h1>
         <div id="grid">
-            <ol>  
-                <li><a href="1.html" class="list">롯데 자이언츠</a></li>
-                <li><a href="2.html" class="list">Tottenham</a></li>
-                <li><a href="3.html" class="list">天元突破グレンラガン</a></li>
-                <li><a href="4.html" class="list">北京国安足球俱乐部</a></li>
-            </ol>
+                <ol>  
+                    <li><a href="1.html" class="list">롯데 자이언츠</a></li>
+                    <li><a href="2.html" class="list">Tottenham</a></li>
+                    <li><a href="3.html" class="list">天元突破グレンラガン</a></li>
+                    <li><a href="4.html" class="list">北京国安足球俱乐部</a></li>
+                </ol>
             <div id="article">   
                 <h2>롯데 자이언츠</h2>
                 <p>
@@ -37,6 +37,14 @@
         </div>    
     </body>
     <script>
+        const href = window.location.href;
+        var listid = document.getElementsByClassName('list');
+
+        for ( let tmp of listid) {
+            if (tmp.href === href ){
+                tmp.style = "color: darkgreen; text-decoration: underline;";
+            }
+        }
     </script>
 </html>
 
