--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     </head>
     <body>
         <h1><a href="index.html">DaSSe</a></h1>
+        <div id="menu">
+            <a href="./index.html" style="color: plum;">홈</a>
+            <a href="./know1.html" id="menuknow">지식</a>
+            <a>일상</a>
+            <a>게임</a>
+        </div>
         <div id="grid">
-            <ol>  
-                <li><a href="1.html" class="list">롯데 자이언츠</a></li>
-                <li><a href="2.html" class="list">Tottenham</a></li>
-                <li><a href="3.html" class="list">天元突破グレンラガン</a></li>
-                <li><a href="4.html" class="list">北京国安足球俱乐部</a></li>
-            </ol>
+            <ol></ol>
             <div id="article">
                 <h2>WEB</h2>
                 <p>
@@ -26,7 +27,7 @@
                     and opened to the public in 1991.
                 </p>
                 <p>
-                    <a href="http://info.cern.ch/"><font color="coral">HOME OF THE FIRST WEBSITE</font></a>
+                    <a href="http://info.cern.ch/"><font color="darkred">HOME OF THE FIRST WEBSITE</font></a>
                 </p>
                 <p>
                     <iframe width="560" height="315" 
@@ -35,10 +36,13 @@
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </p>
             </div>
+            <div></div>
         </div>
         <!--
             2022-06-25
-            WEB-HTML-CSS
+            WEB-HTML-CSS-JAVASCRIPT
         -->  
     </body>
+    <script>
+    </script>
 </html>
