--- a/know4.html
+++ b/know4.html
@@ -9,17 +9,23 @@
     </head>
     <body>
         <h1><a href="index.html">DaSSe</a></h1>
-            <div id="grid">
-                <ol>  
-                    <li><a href="1.html" class="list">롯데 자이언츠</a></li>
-                    <li><a href="2.html" class="list">Tottenham</a></li>
-                    <li><a href="3.html" class="list">天元突破グレンラガン</a></li>
-                    <li><a href="4.html" class="list">北京国安足球俱乐部</a></li>
-                </ol>
-                <div id="article">   
-                    <h2>北京国安足球俱乐部</h2>
-                </div>
-            </div>    
+        <div id="menu">
+            <a href="./index.html">홈</a>
+            <a href="./1.html">지식</a>
+            <a>일상</a>
+            <a>게임</a>
+        </div>
+        <div id="grid">
+            <ol>  
+                <li><a href="know1.html" class="list">롯데 자이언츠</a></li>
+                <li><a href="know2.html" class="list">Tottenham</a></li>
+                <li><a href="know3.html" class="list">天元突破グレンラガン</a></li>
+                <li><a href="know4.html" class="list">北京国安足球俱乐部</a></li>
+            </ol>
+            <div id="article">   
+                <h2>北京国安足球俱乐部</h2>
+            </div>
+        </div>    
     </body>
     <script>
         const href = window.location.href;
