--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <h1><a href="index.html">DaSSe</a></h1>
         <div id="menu">
-            <a href="./index.html" style="color: plum;">홈</a>
-            <a href="./know1.html" id="menuknow">지식</a>
-            <a>일상</a>
+            <a href="./index.html"><span style="color: plum;">홈</span></a>
+            <a href="./know1.html">지식</a>
+            <a href="./life1.html">일상</a>
             <a>게임</a>
         </div>
         <div id="grid">
@@ -41,8 +41,6 @@
         <!--
             2022-06-25
             WEB-HTML-CSS-JAVASCRIPT
-        -->  
+        --> 
     </body>
-    <script>
-    </script>
 </html>
