--- a/know2.html
+++ b/know2.html
@@ -8,9 +8,9 @@
     <body>
         <h1><a href="index.html">DaSSe</a></h1>
         <div id="menu">
-            <a href="./index.html">홈</a>
-            <a href="./1.html">지식</a>
-            <a>일상</a>
+            <a href="./index.html">HOME</a>
+            <a href="./1.html"><span style="color: plum;">지식</span></a>
+            <a href="./life1.html">일상</a>
             <a>게임</a>
         </div>
         <div id="grid">
@@ -33,7 +33,6 @@
                 </p>
             </div>
         </div>    
-    </body>
     <script>
         const href = window.location.href;
         var listid = document.getElementsByClassName('list');
@@ -44,6 +43,7 @@
             }
         }
     </script>
+    </body>
 </html>
 
 
