--- a/know4.html
+++ b/know4.html
@@ -10,9 +10,9 @@
     <body>
         <h1><a href="index.html">DaSSe</a></h1>
         <div id="menu">
-            <a href="./index.html">홈</a>
-            <a href="./1.html">지식</a>
-            <a>일상</a>
+            <a href="./index.html">家</a>
+            <a href="./1.html"><span style="color: plum;">지식</span></a>
+            <a href="./life1.html">일상</a>
             <a>게임</a>
         </div>
         <div id="grid">
@@ -26,7 +26,6 @@
                 <h2>北京国安足球俱乐部</h2>
             </div>
         </div>    
-    </body>
     <script>
         const href = window.location.href;
         var listid = document.getElementsByClassName('list');
@@ -37,4 +36,5 @@
             }
         }
     </script>
+    </body>
 </html>
